; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/test/extr_test_x509.c_conf_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/test/extr_test_x509.c_conf_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conf = common dso_local global i32* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"read error on configuration file\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@line_builder = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @conf_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @conf_close() #0 {
  %1 = load i32*, i32** @conf, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %15

3:                                                ; preds = %0
  %4 = load i32*, i32** @conf, align 8
  %5 = call i64 @ferror(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %3
  %8 = load i32, i32* @stderr, align 4
  %9 = call i32 @fprintf(i32 %8, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @EXIT_FAILURE, align 4
  %11 = call i32 @exit(i32 %10) #3
  unreachable

12:                                               ; preds = %3
  %13 = load i32*, i32** @conf, align 8
  %14 = call i32 @fclose(i32* %13)
  store i32* null, i32** @conf, align 8
  br label %15

15:                                               ; preds = %12, %0
  %16 = load i32*, i32** @line_builder, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i32*, i32** @line_builder, align 8
  %20 = call i32 @SB_free(i32* %19)
  store i32* null, i32** @line_builder, align 8
  br label %21

21:                                               ; preds = %18, %15
  ret void
}

declare dso_local i64 @ferror(i32*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @SB_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
